Added option to change queue names and ip address from app.config file

--- a/App.config
+++ b/App.config
@@ -3,4 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+  <appSettings>
+    <!-- NETWORK SERVICE user  -->
+
+    <!-- Messaging Queue info (vssdmtest0011.welfare.irlgov.ie) -->
+    <add key="Enviroment" value="Vipin's machine" />
+    <add key="MSMQMachineName" value="Vsins-bom-bz101" />
+    <add key="MSMQMachineName_IP" value="10.151.1.107" />
+    <add key="QueueID" value="A265733C-DFF7-4EEE-BD9A-CFFA2B685E55" />
+    <add key="QueueName" value="BOMIRECEIVER_PARTIAL2" />
+    
+
+  </appSettings>
 </configuration>
